<resources>
    <string name="app_name">SnapSale</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="snapsale">SnapSale</string>
    <string name="sign_up_to_login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="login_to_sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="search">Search</string>
    <string name="location">Location</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="strong_password">STRONG-PASSWORD</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="cancel">Cancel</string>
    <string name="email_change_password">A reset password request will be sent to the email:</string>
    <string name="reset">Reset</string>
    <string name="send">Send</string>
    <string name="open_nd">Open Navigation Drawer</string>
    <string name="close_nd">Close Navigation Drawer</string>
    <string name="lidl">Lidl</string>
    <string name="kaufland">Kaufland</string>
    <string name="mega_image">Mega Image</string>
    <string name="penny">Penny</string>
    <string name="find">Find</string>
    <string name="find_the_stores_closest_to_you">Find the stores closest to you.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_out_the_current_sales">Check out the current sales.</string>
    <string name="view">View</string>
    <string name="title">Title</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="visit">Visit</string>
    <string name="check_out_today_s_sales">Check out today\'s sales.</string>
    <string name="title_activity_kaufland">KauflandActivity</string>
    <string name="action_settings">Settings</string>
    <string name="take_a_look_at_today_s">Take a look at today\'s</string>
    <string name="sales_offers_at">sales offers at</string>
    <string name="available">Available</string>
    <string name="hello">Hello!</string>
    <string name="hello_romanian">Bună!</string>
    <string name="explore_kaufland">Explore the sales available this week\nat Kaufland.</string>
    <string name="explore_kaufland_romanian">Explorează ofertele disponibile săptămâna aceasta la Kaufland.</string>
    <string name="explore_lidl">Explore the sales available this week\nat Lidl.</string>
    <string name="explore_lidl_romanian">Explorează ofertele disponibile săptămâna aceasta la Lidl.</string>
    <string name="explore_carrefour">Explore the sales available this week\nat Carrefour.</string>
    <string name="explore_carrefour_romanian">Explorează ofertele disponibile săptămâna aceasta la Carrefour.</string>
    <string name="explore_penny">Explore the sales available this week\nat Penny.</string>
    <string name="explore_penny_romanian">Explorează ofertele disponibile săptămâna aceasta la Penny.</string>
    <string name="explore_favored">Explore your favored sales.</string>
    <string name="explore_favored_romanian">Explorează ofertele tale favorite.</string>
    <string name="subtitle">Subtitle</string>
    <string name="quantity">Quantity</string>
    <string name="loading">Loading...</string>
    <string name="new_price">New Price</string>
    <string name="discount">Discount</string>
    <string name="old_price">Old Price</string>
    <string name="image">Image</string>
    <string name="period">Period</string>
    <string name="hang_tight">Hang tight!</string>
    <string name="we_re_sorry_for_the_wait">We\'re sorry for the wait.</string>
    <string name="your_sales_are_being_processed">Your sales are being processed.</string>
    <string name="weekend">Weekend</string>
    <string name="thursday">Thursday</string>
    <string name="thursday_romanian">Joi</string>
    <string name="plus">Plus</string>
    <string name="monday">Monday</string>
    <string name="monday_romanian">Luni</string>
    <string name="sorry">Sorry!</string>
    <string name="there_are_no_sales_available_for_this_category">There are no sales available for this category!</string>
    <string name="check_in_again_tomorrow">Check in again tomorrow.</string>
    <string name="baskets">Baskets</string>
    <string name="check_out_your_favorite_sales_from_the_other_stores">Check out the other stores as well.</string>
    <string name="number">Number</string>
    <string name="favored">Favored</string>
    <string name="favored_romanian">Oferte</string>
    <string name="name">Name</string>
    <string name="ingredient">Ingredient</string>
    <string name="instruction">Instruction</string>
    <string name="all">All</string>
    <string name="sales">Sales</string>
    <string name="sales_romanian">Favorite</string>
    <string name="explore_the_pre_made_baskets">Explore the pre-made baskets.</string>
    <string name="explore_baskets">Explore our pre-made baskets.</string>
    <string name="explore_baskets_romanian">Explorați coșurile personalizate.</string>
    <string name="baskets_kaufland_text">lists of offers from Kaufland.</string>
    <string name="baskets_kaufland_text_romanian">liste de oferte de la Kaufland.</string>
    <string name="baskets_penny_text">exclusive Penny bundles.</string>
    <string name="baskets_penny_text_romanian">liste de oferte de la Penny.</string>
    <string name="baskets_carrefour_text">Carrefour discount lists.</string>
    <string name="baskets_carrefour_text_romanian">liste de oferte de la Carrefour.</string>
    <string name="baskets_lidl_text">lists of savings from Lidl.</string>
    <string name="baskets_lidl_text_romanian">liste de oferte de la Lidl.</string>
    <string name="baskets_stores_text">offer lists from all of the stores.</string>
    <string name="baskets_stores_text_romanian">liste de oferte de la toate magazinele.</string>
    <string name="n">N</string>
    <string name="market">Market</string>
    <string name="market_romanian">Piața</string>
    <string name="new_sales">New Sales!</string>
    <string name="latest_sales_inventory_just_arrived_at">Latest sales inventory just arrived at</string>
    <string name="processing">Processing...</string>
    <string name="category">Category</string>
    <string name="new_baskets">New Baskets!</string>
    <string name="latest_sales_inventory_just_arrived_at_the_stores">Latest sales inventory just arrived at the stores.</string>
    <string name="daily_check">Daily Check!</string>
    <string name="wait_to_see_if_new_sales_inventories_arrived_from_the_stores">Wait to see if new sales inventories arrived from the stores.</string>
    <string name="wait_to_see_if_new_baskets_arrived_from_the_stores">Wait to see if new baskets arrived from the stores.</string>
    <string name="type">Type</string>
    <string name="tuesday">Tuesday</string>
    <string name="tuesday_romanian">Marți</string>
    <string name="price">Price</string>
    <string name="lidl_price">Lidl Price</string>
    <string name="lidl_price_romanian">Prețul Lidl</string>
    <string name="lidl_plus">Lidl Plus</string>
    <string name="explore_the_shops">Explore the shops.</string>
    <string name="explore_search">Explore the current sales.</string>
    <string name="explore_search_romanian">Explorează ofertele curente.</string>
    <string name="explore_stores">Explore the stores\' current sales.</string>
    <string name="explore_stores_romanian">Explorează ofertele curente de la magazine.</string>
    <string name="only_want_to_browse">Only want to browse?</string>
    <string name="explore">Explore</string>
    <string name="question_mark">\?</string>
    <string name="register">Register!</string>
    <string name="unlock_all_of_the_features">Unlock all of the features.</string>
</resources>