<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bn_location"
        android:title="@string/location"
        android:icon="@drawable/icon_location"/>

    <item
        android:id="@+id/bn_search"
        android:title="@string/search"
        android:icon="@drawable/icon_search"/>

    <item
        android:id="@+id/bn_home"
        android:title="@string/home"
        android:icon="@drawable/icon_home"/>

    <item
        android:id="@+id/bn_favorites"
        android:title="@string/favorites"
        android:icon="@drawable/icon_heart_yellow"/>

    <item
        android:id="@+id/bn_baskets"
        android:title="@string/baskets"
        android:icon="@drawable/icon_basket_yellow"/>

    <item
        android:id="@+id/bn_profile"
        android:title="@string/profile"
        android:icon="@drawable/icon_person"/>

</menu>