<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/baskets_sale_category_layout"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="-1dp"

        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"

        android:background="@drawable/baskets_kaufland_sale_category_bkg">

        <TextView
            android:id="@+id/baskets_sale_category"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/lexend_giga"
            android:text="@string/category"
            android:textColor="@color/darkYellow"
            android:textSize="7sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/baskets_sale_layout"
        android:orientation="vertical"

        android:layout_width="match_parent"
        android:layout_height="370dp"

        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="40dp"

        android:layout_marginBottom="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"

        android:background="@drawable/baskets_kaufland_sale_bkg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/baskets_sale_image"

                android:layout_width="120dp"
                android:layout_height="120dp"

                android:layout_marginBottom="30dp"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:gravity="center">

            <TextView
                android:id="@+id/baskets_sale_title"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"

                android:fontFamily="@font/lexend_exa"
                android:text="@string/title"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="10.5sp"
                android:textAlignment="center"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/baskets_sale_subtitle"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_below="@id/baskets_sale_title"
                android:layout_marginBottom="5dp"

                android:fontFamily="@font/poppins_medium"
                android:text="@string/subtitle"
                android:textColor="@color/blue"
                android:textSize="9sp"
                android:textAlignment="center"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/baskets_sale_quantity"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_below="@id/baskets_sale_subtitle"

                android:fontFamily="@font/poppins_medium"
                android:text="@string/quantity"
                android:textColor="@color/darkGray"
                android:textSize="8sp"
                android:textAlignment="center"
                tools:ignore="SmallSp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/baskets_sale_price_layout"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="30dp"

                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"

                android:background="@drawable/baskets_kaufland_sale_price_bkg">

                <TextView
                    android:id="@+id/baskets_sale_discount"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"

                    android:fontFamily="@font/lexend_deca"
                    android:text="@string/discount"
                    android:textColor="@color/lightGray"
                    android:textSize="8sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/baskets_sale_old_price"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/baskets_sale_discount"
                    android:layout_centerHorizontal="true"

                    android:layout_marginBottom="8dp"

                    android:fontFamily="@font/lexend_deca"
                    android:text="@string/old_price"
                    android:textColor="@color/lightGray"
                    android:textSize="8sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/baskets_sale_new_price"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/baskets_sale_old_price"
                    android:layout_centerHorizontal="true"

                    android:fontFamily="@font/lexend_exa"
                    android:text="@string/new_price"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="9sp"
                    tools:ignore="SmallSp" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>