<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/baskets_general_layout"

    android:orientation="horizontal"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginBottom="60dp"
    android:background="@drawable/baskets_general_bkg"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:gravity="center"
        android:background="@drawable/baskets_general_number_bkg">

        <RelativeLayout
            android:layout_width="40dp"
            android:layout_height="30dp"

            android:background="@drawable/icon_basket_filled_white">

            <TextView
                android:id="@+id/baskets_general_number"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"

                android:fontFamily="@font/caveat_bold"
                android:text="@string/n"
                android:textSize="12sp"
                android:textColor="@color/darkBlue"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"

        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/baskets_general_type_layout"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"

            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"

            android:background="@drawable/baskets_general_type_bkg">

            <TextView
                android:id="@+id/baskets_general_type"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerInParent="true"

                android:fontFamily="@font/lexend_exa"
                android:text="@string/type"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="8sp"
                tools:ignore="SmallSp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/baskets_general_name"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"

            android:fontFamily="@font/lexend_giga"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="9sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/baskets_general_period"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginBottom="35dp"

            android:fontFamily="@font/poppins_medium"
            android:text="@string/period"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"

            android:background="@drawable/baskets_general_product_count_bkg">

            <TextView
                android:id="@+id/baskets_general_product_count"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerInParent="true"

                android:fontFamily="@font/lexend_exa"
                android:text="@string/number"
                android:textColor="@color/darkBlue"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="8sp"
                tools:ignore="SmallSp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>